# s

./: .flake8  .gitignore  README.md  meson.build  meson_install.sh  meson_options.txt  org.freedesktop.Piper.json  piper.in
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  main.yml
data/: aboutDialog.ui.in  generate-piper-gresource.xml.py  meson.build  org.freedesktop.Piper.appdata.xml.in.in  piper.1.in  piper.gresource.xml.in
data/svgs/: README.md  check-svg.py  svg-lookup.ini
data/ui/: AboutDialog.ui.in  AdvancedPage.ui  ButtonDialog.ui  ButtonRow.ui  DeviceRow.ui  ErrorPerspective.ui  LedDialog.ui  MousePerspective.ui  OptionButton.ui  ProfileRow.ui  ResolutionRow.ui  ResolutionsPage.ui  WelcomePerspective.ui  Window.ui
piper/: advancedpage.py  application.py  buttondialog.py  buttonspage.py  devicerow.py  errorperspective.py  leddialog.py  ledspage.py  mousemap.py  mouseperspective.py  optionbutton.py  piper.py  profilerow.py  ratbagd.py  resolutionrow.py  resolutionspage.py  svg.py  welcomeperspective.py  window.py
piper/util/: gobject.py
po/: LINGUAS  POTFILES  bg.po  cs.po  de.po  es.po  fr.po  hr.po  it.po  ka.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  uk_UA.po  zh_CN.po  zh_TW.po
tests/: check-svg.py  svg-lookup-ini-test.py
